[package]
name = "tensorzero-internal"
version = "0.1.0"
edition = "2021"


[features]
# Forward these features to the Rust client, so that the embedded gateway
# has the `e2e_tests` feature enabled when we run our e2e tests
e2e_tests = ["tensorzero/e2e_tests"]
batch_tests = ["tensorzero/batch_tests"]


[[test]]
name = "e2e"
path = "tests/e2e/tests.rs"
required-features = ["e2e_tests"]

[[test]]
name = "batch"
path = "tests/e2e/batch.rs"
required-features = ["batch_tests"]


[lints]
workspace = true


[dependencies]
async-stream = { workspace = true }
async-trait = "0.1.86"
aws-config = { version = "1.6", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = { version = "1.77.0", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "default-https-client",
] }
aws-smithy-types = { version = "1.3.0", features = [
    "serde-deserialize",
    "serde-serialize",
] }
aws-types = "1.3.6"
axum = { workspace = true }
backon = { version = "1.2.0", features = ["tokio-sleep"] }
blake3 = "1.5.5"
bytes = "1.6.1"
chrono = { version = "0.4.40", features = ["serde"] }
derive_builder = "0.20.0"
futures = { workspace = true }
futures-core = "0.3.30"
hex = "0.4.3"
image = { version = "0.25.5", default-features = false }
itertools = "0.13.0"
jsonschema = "0.18.0"
jsonwebtoken = "9.3.0"
lazy_static = { version = "1.5.0" }
metrics = "0.23.0"
metrics-exporter-prometheus = { version = "0.15.3", features = [
    "http-listener",
], default-features = false }
minijinja = { version = "2.1.0", features = [
    "loader",
    "debug",
    "json",
    "loop_controls",
    "builtins",
] }
object_store = { version = "0.11.2", features = ["serde", "aws"] }
rand = "0.8.5"
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde-untagged = "0.1.7"
serde_json = { workspace = true }
serde_path_to_error = "0.1.16"
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.3"
tokio = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "json",
] }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true }


[dev-dependencies]
tempfile = "3.10.1"
tracing-test = { workspace = true }
tensorzero = { path = "../clients/rust" }
paste = "1.0.15"
base64 = "0.22.1"
aws-sdk-s3 = { version = "1.79.0", default-features = false, features = [
    "behavior-version-latest",
    "sigv4a",
    "rt-tokio",
    "default-https-client",
] }
aws-credential-types = { version = "1.2.2", features = [
    "hardcoded-credentials",
] }
