[package]
name = "tensorzero-internal"
version = "0.1.0"
edition = "2021"


[features]
# Forward this feature to the Rust client, so that the embedded gateway
# has the `e2e_tests` feature enabled when we run our e2e tests
e2e_tests = ["tensorzero/e2e_tests"]

[[test]]
name = "e2e"
path = "tests/e2e/tests.rs"
required-features = ["e2e_tests"]

[lints]
workspace = true


[dependencies]
async-stream = { workspace = true }
async-trait = "0.1.86"
aws-config = { version = "1.6", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = { version = "1.79.0", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "default-https-client",
] }
aws-smithy-types = { version = "1.3.0", features = [
    "serde-deserialize",
    "serde-serialize",
] }
aws-types = "1.3.6"
axum = { workspace = true }
backon = { version = "1.4.1", features = ["tokio-sleep"] }
blake3 = "1.7.0"
bytes = "1.6.1"
chrono = { version = "0.4.40", features = ["serde"] }
derive_builder = "0.20.0"
futures = { workspace = true }
futures-core = "0.3.30"
hex = "0.4.3"
image = { version = "0.25.6", default-features = false }
itertools = "0.14.0"
jsonschema = "0.29.1"
jsonwebtoken = "9.3.1"
lazy_static = { workspace = true }
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.16.2", features = [
    "http-listener",
], default-features = false }
minijinja = { version = "2.8.0", features = [
    "loader",
    "debug",
    "json",
    "loop_controls",
    "builtins",
] }
object_store = { version = "0.12.0", features = ["serde", "aws"] }
rand = "0.9.0"
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde-untagged = { workspace = true}
serde_json = { workspace = true }
serde_path_to_error = "0.1.17"
sha2 = "0.10.8"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
tokio = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "json",
] }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
tensorzero-derive = { path = "../tensorzero-derive" }
clap = { workspace = true }
scoped-tls = "1.0.1"


[dev-dependencies]
tempfile = "3.19.1"
tracing-test = { workspace = true }
tensorzero = { path = "../clients/rust" }
paste = "1.0.15"
base64 = "0.22.1"
aws-sdk-s3 = { version = "1.81.0", default-features = false, features = [
    "behavior-version-latest",
    "sigv4a",
    "rt-tokio",
    "default-https-client",
] }
aws-credential-types = { version = "1.2.2", features = [
    "hardcoded-credentials",
] }
