[package]
name = "tensorzero-optimizers"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
e2e_tests = ["tensorzero/e2e_tests"]
optimization_tests = ["e2e_tests"]
ts-bindings = ["dep:ts-rs", "tensorzero-core/ts-bindings"]

[dependencies]
tensorzero-core = { path = "../tensorzero-core" }
evaluations = { path = "../evaluations" }

# Core async and serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
tensorzero-derive = { path = "../internal/tensorzero-derive" }
tokio = { workspace = true }
tokio-util = "0.7.12"

# HTTP and web framework (needed for handlers)
axum = { workspace = true }
http = { workspace = true }

# Utilities
futures = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
secrecy = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Object storage (for file uploads)
object_store = { workspace = true }
mime = { workspace = true }

# Tracing and logging
tracing = { workspace = true }

# ts-rs
ts-rs = { workspace = true, optional = true }

[dev-dependencies]
tensorzero-core = { path = "../tensorzero-core", features = ["e2e_tests"] }
tensorzero = { path = "../clients/rust", features = ["e2e_tests"] }
evaluations = { path = "../evaluations" }
minijinja = { workspace = true }
paste = "1.0.15"
tempfile = "3.21.0"
base64 = "0.22.1"
tokio-stream = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[[test]]
name = "optimization-live"
path = "tests/live_tests.rs"
required-features = ["optimization_tests"]

[[test]]
name = "optimization-mock"
path = "tests/mock_tests.rs"
required-features = ["e2e_tests"]

[[test]]
name = "e2e_dicl"
path = "tests/e2e/dicl.rs"
required-features = ["e2e_tests"]

[[test]]
name = "e2e_gepa"
path = "tests/e2e/gepa/mod.rs"
required-features = ["e2e_tests"]

# False positive (used in macro)
[package.metadata.cargo-shear]
ignored = ["paste"]
