[package]
name = "write-fixtures"
edition = "2024"
version.workspace = true

[dependencies]
tensorzero = { path = "../clients/rust", features = ["e2e_tests"] }
tensorzero-internal = { path = "../tensorzero-internal", features = ["e2e_tests"] }
clap = { workspace = true }
url = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tqdm = "0.7.0"
uuid.workspace = true
console-subscriber = "0.4.1"

[lints]
workspace = true
