[project]
name = "tensorzero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "uuid7>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
