[project]
name = "tensorzero"
version = "2024.12.3"
description = "The Python client for TensorZero"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0", "uuid-utils>=0.9.0"]
authors = [
    { name = "Viraj Mehta", email = "viraj@tensorzero.com" },
    { name = "Gabriel Bianconi", email = "gabriel@tensorzero.com" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.3.2", "pytest-asyncio>=0.24.0"]
