[package]
name = "tensorzero"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license.workspace = true

[[test]]
name = "client_tests"
path = "tests/tests.rs"
required-features = ["e2e_tests"]

[dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
secrecy = { workspace = true }
uuid = { workspace = true }
reqwest-eventsource = { workspace = true }
async-stream = { workspace = true }
tokio-stream = { workspace = true }
tensorzero-core = { path = "../../tensorzero-core" }
tensorzero-auth = { path = "../../internal/tensorzero-auth" }
ts-rs = { workspace = true }
url = { workspace = true }
thiserror = "2.0.16"
pyo3 = { workspace = true, optional = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde-untagged = { workspace = true }
git2 = { workspace = true }
serde_path_to_error = { workspace = true }
tensorzero-derive = { path = "../../internal/tensorzero-derive" }
mime = { workspace = true }
tokio-util = "0.7.17"
tempfile = { version = "3.21.0" }
paste = { version = "1.0.15", optional = true }
lazy_static = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
clap = { workspace = true }
lazy_static = { workspace = true }
object_store = { workspace = true }
tokio = { workspace = true }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[features]
# Forward this feature to 'tensorzero-core', so that our types will generate
# the appropriate pyo3 attributes.
pyo3 = ["dep:pyo3", "tensorzero-core/pyo3"]
default = []
# Forward this feature to 'tensorzero-core', so that our embedded
# client can recognize things like the `dummy` provider
e2e_tests = ["tensorzero-core/e2e_tests", "dep:paste"]
