[package]
name = "tensorzero"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license.workspace = true

[[test]]
name = "client_tests"
path = "tests/tests.rs"
required-features = ["e2e_tests"]

[dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
tensorzero-core = { path = "../../tensorzero-core" }
tensorzero-optimizers = { path = "../../tensorzero-optimizers" }
url = { workspace = true }
pyo3 = { workspace = true, optional = true }
tracing = { workspace = true }
tokio = { workspace = true }
git2 = { workspace = true }
mime = { workspace = true }
tempfile = { version = "3.21.0" }
paste = { version = "1.0.15", optional = true }
lazy_static = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
clap = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

[features]
# Forward this feature to 'tensorzero-core', so that our types will generate
# the appropriate pyo3 attributes.
pyo3 = ["dep:pyo3", "tensorzero-core/pyo3"]
default = []
# Forward this feature to 'tensorzero-core', so that our embedded
# client can recognize things like the `dummy` provider
e2e_tests = ["tensorzero-core/e2e_tests", "dep:paste"]

# Ignore the `pyo3` crate (used by our own `pyo3` feature above)
[package.metadata.cargo-machete]
ignored = ["pyo3"]

[package.metadata.cargo-shear]
ignored = ["pyo3"]
