[package]
name = "config-applier"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tensorzero-config-paths = { path = "../tensorzero-config-paths" }
tensorzero-core = { path = "../tensorzero-core", default-features = false }
tensorzero-derive = { path = "../tensorzero-derive" }
pathdiff = "0.2"
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
toml = { workspace = true }
toml_edit = { workspace = true, features = ["serde"] }
ts-rs.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = []

[lints]
workspace = true
