[package]
name = "evaluations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[test]]
name = "e2e"
path = "tests/e2e/tests.rs"
required-features = ["e2e_tests"]

[dependencies]
tensorzero-core = { path = "../tensorzero-core" }
tensorzero-derive = { path = "../tensorzero-derive" }
tensorzero-inference-types = { path = "../tensorzero-inference-types" }
tensorzero-ts-types = { path = "../tensorzero-ts-types", optional = true }
ts-executor-pool = { path = "../ts-executor-pool", optional = true }
async-trait = { workspace = true }
clap = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
indicatif = "0.18.4"
ts-rs.workspace = true

[dev-dependencies]
tensorzero-core = { path = "../tensorzero-core", features = ["e2e_tests"] }
tensorzero = { path = "../tensorzero-client", features = ["e2e_tests"] }
googletest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

[features]
default = ["ts-executor-pool"]
# Forward this feature to 'tensorzero-core', so that our
# tests can recognize things like the `dummy` provider
e2e_tests = ["tensorzero-core/e2e_tests", "ts-executor-pool"]
# Enables the TypeScript judge evaluator. When disabled, attempts to run
# a TypeScript judge evaluator at runtime return an error and the v8/deno
# stack is not pulled into the build (relevant for builds that target
# platforms without a prebuilt `rusty_v8`, e.g. manylinux2014/musllinux).
ts-executor-pool = ["dep:ts-executor-pool", "dep:tensorzero-ts-types"]
