[package]
name = "provider-proxy"
version = "0.0.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[[test]]
name = "e2e"
path = "tests/e2e/tests.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { version = "1.10.0", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.6.0", features = ["derive"] }
hex = "0.4.3"
http = "1.4.0"
http-body-util = { workspace = true }
http-serde-ext = "1.0.2"
hyper = { version = "1.9.0", features = ["client", "server", "http1", "http2"] }
hyper-util = "0.1.19"
moka = { version = "0.12.15", features = ["sync"] }
pin-project = "1.1.11"
rcgen = "0.14.7"
regex = "1"
reqwest.workspace = true
rustls = { version = "0.23.37", features = ["ring"] }
serde = { workspace = true }
serde_json.workspace = true
sha2 = "0.11.0"
tokio.workspace = true
tokio-rustls = "0.26.1"
tracing = "0.1.43"
tracing-subscriber.workspace = true
tempfile = { workspace = true }


[lints]
workspace = true

[dev-dependencies]
axum.workspace = true
rand = "0.10.0"
async-stream.workspace = true
reqwest-sse-stream.workspace = true
futures-util = "0.3.31"
